sandc/test/fixtures/astRegression/shouldSucceed/Props.sand
pub class Prop {
    basic: int;
    re reassignable: int;
    complexType: Foo<char[+]>?;
}