sandc/test/fixtures/astRegression/shouldFail/productions/type/PrimitiveGenericInstantiation.sand
pub class PrimitiveGenericInstantiation {
    foo(): int<A> {
        
    }
}